<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_apps"
        android:id="@+id/textViewAppList"
        android:padding="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_save"
        android:id="@+id/buttonSave"
        android:layout_gravity="left|bottom"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_exit"
        android:id="@+id/imageButtonExit"
        android:layout_gravity="right|bottom"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewAngryBirds"
        android:layout_gravity="left|top"
        android:layout_below="@+id/textViewAppList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/ic_angrybirds"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_angrybirds"
        android:id="@+id/textViewAngryBirds"
        android:textSize="30dp"
        android:padding="10dp"
        android:layout_alignBottom="@+id/imageViewAngryBirds"
        android:layout_toRightOf="@+id/imageViewAngryBirds"
        android:layout_toEndOf="@+id/imageViewAngryBirds" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxAngryBirds"
        android:checked="false"
        android:padding="10dp"
        android:layout_alignTop="@+id/textViewAngryBirds"
        android:layout_toRightOf="@+id/textViewAngryBirds"
        android:layout_toEndOf="@+id/textViewAngryBirds"
        android:layout_alignBottom="@+id/textViewAngryBirds" />

</RelativeLayout>
