<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_change_email"
        android:id="@+id/textViewChangeEmail"
        android:padding="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_save"
        android:id="@+id/buttonSave"
        android:layout_gravity="left|bottom"
        android:padding="10dp"
        android:layout_alignBaseline="@+id/imageButtonExit"
        android:layout_alignBottom="@+id/imageButtonExit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_exit"
        android:id="@+id/imageButtonExit"
        android:layout_gravity="right|bottom"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextNewEmail"
        android:layout_below="@+id/textViewChangeEmail"
        android:layout_alignRight="@+id/imageButtonExit"
        android:layout_alignEnd="@+id/imageButtonExit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:textAlignment="center" />
</RelativeLayout>
